<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_layout" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"  >
    
    <!-- H-Layout to display app icon and title -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_title_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="40dip"
	    android:orientation="horizontal"
	    android:paddingBottom="2dip"
	    android:paddingTop="4dip" 
	    android:layout_alignParentTop="true"
    	style="@style/MenuStyle" >
    	
    	<!-- Application icon -->
		<ImageView 
			android:id="@+id/main_app_image"
			android:layout_alignParentLeft="true" 
			style="@style/AppIconStyle" />
			    		
   		<!-- Application title -->
	    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
	        android:id="@+id/main_title_text" 
	        style="@style/ScreenTitleStyle"
	        android:layout_width="wrap_content"
	        android:layout_toRightOf="@id/main_app_image" /> 
	        
	    <!-- Voice Recognition button -->
   	    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
   	        android:id="@+id/main_menu_voice"
   	        android:layout_width="wrap_content"
   	        android:layout_height="fill_parent"
   	        android:layout_alignParentRight="true"
   	        android:paddingRight="8dip" 
   	        android:src="@drawable/dark_voice" 	
   	        android:contentDescription="@string/voice_description"
   	        android:hapticFeedbackEnabled="true" />
	    
    
    </RelativeLayout>
       	
    <!-- Green bar below title -->
    <TextView
    	android:id="@+id/main_title_bar"
    	android:background="#00CC00" 
    	android:layout_width="fill_parent"
    	android:layout_height="2dp"	
    	android:layout_below="@+id/main_title_layout" />
    
    <!-- Listview to show the user's lists -->
	<com.kozzer.lists_free.DragAndDropListView  
		android:id="@+id/main_list"
    	android:layout_below="@+id/main_title_bar"
    	style="@style/ListViewStyle"  />
	
   	<!-- Gray bar separating the listview from the menu below -->
	<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/child_menu_bar"
    	android:background="#666666" 
    	android:layout_width="fill_parent"
    	android:layout_height="1dip"
    	android:layout_above="@+id/main_menu"/>
	
	<!-- Layout holding the on-screen menu -->
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	    android:id="@+id/main_menu"
   	    android:layout_width="fill_parent"
   	    android:layout_height="44dip"
   	    android:padding="4dip"
   	    android:layout_above="@+id/main_ad" 
   	    style="@style/MenuStyle" >
		    
   	    <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
   	        android:id="@+id/main_menu_add"
   	        android:layout_width="wrap_content"
   	        android:layout_height="fill_parent"
   	        android:layout_weight="1"
   	        android:clickable="true"
   	        android:src="@drawable/dark_add_list"
   	        android:contentDescription="@string/add_new_list_description"
   	        android:hapticFeedbackEnabled="true" />
   	    
    	<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
   	        android:id="@+id/main_menu_undo"
   	        android:layout_width="wrap_content"
   	        android:layout_height="fill_parent"
   	        android:layout_weight="1"
   	        android:src="@drawable/dark_undo" 			
   	        android:contentDescription="@string/more_undo"
   	        android:hapticFeedbackEnabled="true" />
   	    
    	<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
   	        android:id="@+id/main_menu_more"
   	        android:layout_width="wrap_content"
   	        android:layout_height="fill_parent"
   	        android:layout_weight="1"
   	        android:src="@drawable/dark_more" 			
   	        android:contentDescription="@string/preferences_descrption"
   	        android:hapticFeedbackEnabled="true" />
   	    
	</LinearLayout>
		
	<com.google.ads.AdView
        xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/main_ad"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true" 
        android:background="#666666"
        googleads:loadAdOnCreate="true" 
        googleads:adSize="BANNER"
        googleads:adUnitId="@string/admob_id" />

	
</RelativeLayout>